5th video finished in MainActivity set binding navController toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add">Add</string>
     <string name="choice_type_db">Choice type DB</string>
     <string name="room">Room</string>
+    <string name="title">Notes</string>
 </resources>
